remove transaction in storage

--- a/app.yaml
+++ b/app.yaml
@@ -4,6 +4,15 @@ runtime: go
 api_version: go1
 
 handlers:
+
+- url: /(.*\.(css|gif|png|jpg|ico|js|html))
+  static_files: static/\1
+  upload: static/(.*\.(css|gif|png|jpg|ico|js|html))
+
+- url: /
+  static_files: static/index.html
+  upload: static/index.html
+
 - url: /.*
   script: _go_app
-  
+
